--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -143,7 +143,7 @@ body {
 
 #alert {
   font-family: 'Swanky';
-  font-size: xx-large;
+  font-size: large;
   margin-bottom: 2%;
   width: 100%;
   box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
